ci-pipelines/airflow-ci/ingress.yaml
#managed by opeomotayo
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: airflow-ingress
  namespace: airflow
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
      - airflow.opeomotayo.net
    secretName: airflow-production-certificate
  rules:
  - host: airflow.opeomotayo.net
    http:
      paths:
      - backend:
          service:
            name: airflow-webserver
            port:
              number: 8080
        path: /
        pathType: Prefix
